--- a/index.html
+++ b/index.html
@@ -34,5 +34,5 @@
 	<audio controls>
   <source src="jntm.mp3" type="audio/mpeg">
 </audio>
-<body></body>
+<body><script src="https://fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script></body>
 </html>
